# ai-ml-knowledge-base

./: .gitignore  README.md  fix_images.py
.obsidian/: workspace.json
knowledge-base/: ML AI Engineering Cheat Sheet.md  qa-index.md
knowledge-base/.obsidian/: workspace.json
knowledge-base/health-checks/: 2026-04-13.md
knowledge-base/manual/: ML AI Engineering Cheat Sheet.md  Search Interface PRD.md
knowledge-base/queries/: agentfile-length-and-authorship.md  harness-engineering-glossary.md
knowledge-base/raw/: Graph-Based Prompting and Reasoning with Language Models.md  Language Model Training and Inference From Concept to Code.md  Language Models GPT and GPT-2 - by Cameron R. Wolfe, Ph.D..md  Understanding and Using Supervised Fine-Tuning (SFT) for Language Models.md  Vision Transformers - by Cameron R. Wolfe, Ph.D..md
knowledge-base/summaries/: A Practitioners Guide to Retrieval Augmented Generation (RAG).md  AI Agents from First Principles.md  AINews Is Harness Engineering real - Latent.Space.md  Andrej Karpathy — AGI is still a decade away.md  Applying Statistics to LLM Evaluations.md  Building Multi-Agent Systems (Part 3) - by Shrivu Shankar.md  Continual Learning with RL for LLMs.md  Demystifying Reasoning Models - by Cameron R. Wolfe, Ph.D..md  Design Patterns for Securing LLM Agents against Prompt Injections.md  Detecting misbehavior in frontier reasoning models  OpenAI.md  (+22 more)
tests/: test_search_core.py
tools/search/: README.md  index.py  pyproject.toml  requirements.txt  search_core.py  server.py
tools/search/static/: index.html
(+84 files in other folders)
